create movie detail activity

--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -131,7 +131,7 @@
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="24dp">
+            android:layout_marginBottom="18dp">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rcvCategories"
@@ -169,7 +169,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
                 android:layout_marginBottom="12dp"
-                android:text="All"
+                android:text="Mix"
                 android:id="@+id/tvGenre"
                 android:textColor="@color/light_grey"
                 android:textSize="14sp" />
