--- a/app/src/main/res/layout/view_slider_item.xml
+++ b/app/src/main/res/layout/view_slider_item.xml
@@ -4,14 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:cardCornerRadius="20dp"
-    android:layout_marginHorizontal="6dp"
     app:strokeWidth="0dp">
 
     <ImageView
         android:id="@+id/ivItem"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:adjustViewBounds="true"
-        android:background="@drawable/wide"
-        android:contentDescription="@string/image_desc" />
+        android:adjustViewBounds="false"
+        android:src="@drawable/wide"
+        android:contentDescription="@string/image_desc"
+        android:scaleType="centerCrop" />
 </com.google.android.material.card.MaterialCardView>
