--- a/app/src/main/res/navigation/app_nav.xml
+++ b/app/src/main/res/navigation/app_nav.xml
@@ -14,7 +14,11 @@
         android:id="@+id/favouriteFragment"
         android:name="com.firstapp.moviesapp.ui.fragments.FavouriteFragment"
         android:label="fragment_favourite"
-        tools:layout="@layout/fragment_favourite" />
+        tools:layout="@layout/fragment_favourite" >
+        <action
+            android:id="@+id/action_favouriteFragment_to_exploreFragment"
+            app:destination="@id/exploreFragment" />
+    </fragment>
     <fragment
         android:id="@+id/profileFragment"
         android:name="com.firstapp.moviesapp.ui.fragments.ProfileFragment"
