--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -12,19 +12,21 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="16dp"
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/btnSearch"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_marginVertical="12dp"
-            android:background="@drawable/bg_search_box"
-            android:paddingHorizontal="20dp"
-            android:paddingVertical="12dp">
+            android:layout_marginStart="16dp"
+            android:backgroundTint="#2C2A2C"
+            app:cardCornerRadius="50dp"
+            app:strokeWidth="0dp">
 
             <ImageView
                 android:id="@+id/iconSearch"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:contentDescription="@string/image_desc"
                 android:src="@drawable/search"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -32,29 +34,12 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:tint="@color/light_grey" />
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:background="@null"
-                android:hint="@string/search_movies"
-                android:inputType="text"
-                android:lines="1"
-                android:paddingStart="16dp"
-                android:singleLine="true"
-                android:textColor="@color/white"
-                android:textColorHint="@color/light_grey"
-                android:textSize="16sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/iconSearch"
-                app:layout_constraintTop_toTopOf="parent" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </com.google.android.material.card.MaterialCardView>
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/slider"
             android:layout_width="match_parent"
             android:layout_height="220dp"
-            android:layout_marginTop="8dp"
             android:clipChildren="false"
             android:clipToPadding="false"
             android:overScrollMode="always"
