--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_explore_frag"
+    android:background="@drawable/bg_fragment"
     android:orientation="vertical"
     tools:context=".ui.activities.SearchActivity">
 
