--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_explore_frag"
+    android:background="@drawable/bg_fragment"
     tools:context=".ui.fragments.ExploreFragment">
 
     <LinearLayout
