Update no search result prompt

--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -139,7 +139,7 @@
                     android:id="@+id/btnGoogleSignIn"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/bg_input"
+                    android:background="@drawable/bg_google_signin"
                     android:drawableStart="@drawable/google"
                     android:drawablePadding="12dp"
                     android:paddingVertical="16dp"
@@ -152,7 +152,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="12dp"
-                    android:background="@drawable/bg_input"
+                    android:background="@drawable/bg_google_signin"
+                    android:clickable="true"
                     android:drawableStart="@drawable/facebook"
                     android:drawablePadding="12dp"
                     android:paddingVertical="16dp"
