--- a/app/src/main/res/drawable/bg_intro_btn.xml
+++ b/app/src/main/res/drawable/bg_intro_btn.xml
@@ -15,7 +15,7 @@
         android:top="4dp">
         <shape android:shape="rectangle">
             <corners android:radius="50dp" />
-            <solid android:color="@color/black" />
+            <solid android:color="@color/btn_intro_foreground" />
         </shape>
     </item>
 </layer-list>
