--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -75,4 +75,14 @@
         android:id="@+id/rcvSearchSuggestions"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/tvNoResult"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:text="@string/no_result"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:visibility="gone" />
 </LinearLayout>
